# LLM-Inference-Engine

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  client.py  docker-compose.yml  inference.proto  inference_pb2.py  inference_pb2_grpc.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/core/: __init__.py  batcher.py  beam_search.py  benchmarks.py  config.py  kv_cache.py  onnx_infer.py  quantization.py  token_generator.py
src/services/: __init__.py  grpc_service.py
src/utils/: health.py  quantization.py  thread_pool.py
tests/: test_batcher.py  test_beam_search.py  test_grpc_simple.py
